<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RestaurantListActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#c00"
        android:text="Whats's your postcode ?"
        android:layout_alignParentStart="false"
        android:id="@+id/textView"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />
    <EditText
        android:id="@+id/postcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:text="@string/restlist_justeat_postcode"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/postcode_find"
        android:layout_above="@android:id/list"
        android:maxLength="8" />

    <Button
        android:id="@+id/postcode_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restlist_button_postcode_update"
        android:layout_alignEnd="@android:id/list"
        android:layout_below="@+id/textView" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/postcode_find"
        android:layout_marginTop="5dp" />



</RelativeLayout>
