<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:descendantFocusability="blocksDescendants">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/restaurant_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:src="@drawable/restaurant_logo"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/restaurant_logo"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:text="@string/restaurant_list_item_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/restaurant_cuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurant_name"
        android:layout_toLeftOf="@+id/restaurant_rating"
        android:layout_toRightOf="@+id/restaurant_logo"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:text="@string/restaurant_list_item_cuisine"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/restaurant_cuisine"
        android:layout_toRightOf="@+id/restaurant_logo"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:text="@string/restaurant_list_item_address"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RatingBar
        android:id="@+id/restaurant_rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/restaurant_name"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/restaurant_rating_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/restaurant_rating"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical"
        android:text="@string/restaurant_list_item_rating_count"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
